Font sizes, various spacing changes, grid--border restructure to fix text select bug, changing everything, send help

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -38,6 +38,7 @@ body {
 img.responsive {
     width: 100%;
     height: auto;
+    display: block;
 }
 
 .u-vpadding {
