--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -26,6 +26,10 @@
         font-weight: 300;
         letter-spacing: .3rem;
         text-transform: uppercase;
+
+        @include respond(br5) {
+            margin-bottom: 3rem;
+        }
     }
 
     &__icon-box {
@@ -87,20 +91,22 @@
         flex-direction: row;
         align-items: stretch;
         width: 100%;
+
+        font-family: inherit;
+        font-weight: 400;
+        font-size: 1.8rem;
     }
 
     &__input {
         outline-color: $color-secondary;
-        font-size: 1.8rem;
         border: 0;
         margin: 0;
+        padding: .9rem 1rem .5rem 1rem;
+        line-height: 1.2;
         flex: 1;
     }
 
     &__submit {
-        font-family: inherit;
-        font-weight: 400;
-        font-size: 1.8rem;
         text-transform: uppercase;
         margin: 0;
         padding: .5rem 1rem;
