--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -3,10 +3,6 @@
     background-repeat: repeat;
     position: relative;
 
-    // -webkit-box-shadow: 0 .5rem 1rem 0 rgba(#000, 0.1);
-    // -moz-box-shadow: 0 .5rem 1rem 0 rgba(#000, 0.1);
-    // box-shadow: 0 .5rem 1rem 0 rgba(#000, 0.1);
-
     &__text {
         display: flex;
         flex-direction: column;
@@ -25,16 +21,79 @@
     }
 }
 
-.features {
+.features-section {
     & .heading-secondary {
         margin-bottom: 2rem;
     }
+
+    &__outline {
+        border-right: .2rem solid $color-grey-light-2;
+        border-bottom: .2rem solid $color-grey-light-2;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 100%;
+        align-items: stretch;
+
+        @include respond(br4) {
+            border: none;
+        }
+
+        &::before {
+            content: "";
+            z-index: 20;
+            width: 100%;
+            height: 100%;
+            outline-width: 0rem;
+            outline-style: solid;
+            outline-color: $color-secondary;
+            transition: all .2s;
+            grid-area: 1 / 1 / 2 / 2;
+        }
+
+        & p.paragraph {
+            padding: 2.5rem;
+            z-index: 30;
+            grid-area: 1 / 1 / 2 / 2;
+            color: $color-grey;
+        }
+
+        &:hover {
+            border-color: transparent;
+
+            &::before {
+                outline-width: 1rem;
+            }
+
+            & p.paragraph{
+                color: $color-grey-dark;
+            }
+        }
+    }
 }
 
-.partners {
+
+.partners-section {
     background-image: url(../img/noise-grey-400.png);
     background-repeat: repeat;
     position: relative;
+
+    &__images {
+
+        & img {
+            margin-bottom: 3rem;
+            @include respond(br4) {
+                margin-bottom: 0;
+            }
+        }
+
+        @include respond(br4) {
+            margin-top: 2rem;
+            display: grid;
+            grid-template-columns: 6fr 6fr;
+            column-gap: 2rem;
+            align-items: center;
+        }
+    }
 
     &__container {
         display: flex;
